--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
         <activity android:name=".Activity.LoginActivity"/>
         <activity android:name=".Activity.PreviewActivity"/>
         <activity android:name=".Activity.ProfileActivity"/>
+        <activity android:name=".Activity.JoinActivity"/>
     </application>
 </manifest>
