--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.DiscoverActivity"/>
-        <activity android:name=".Activity.DrawingActivity"/>
-        <activity android:name=".Activity.GetPremiumActivity"/>
-        <activity android:name=".Activity.LoginActivity"/>
-        <activity android:name=".Activity.PreviewActivity"/>
-        <activity android:name=".Activity.ProfileActivity"/>
-        <activity android:name=".Activity.JoinActivity"/>
-        <activity android:name=".Activity.HistoryActivity"/>
+        <activity android:name=".Activity.DiscoverActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.DrawingActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.GetPremiumActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.LoginActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.PreviewActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.ProfileActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.JoinActivity" android:screenOrientation="portrait" />
+        <activity android:name=".Activity.HistoryActivity" android:screenOrientation="portrait" />
+
+        <!-- Configuration pour Chrome OS -->
+        <meta-data android:name="com.google.android.gms.chromescreen.window_layout" android:value="portrait" />
+
     </application>
 </manifest>
